nabu: parts: Introduce Dolby Atmos
Based on existing dirac implementation and observing stock
sound effects app and daxservice.

Thanks to jhenrique09 for the hack from old dirac parts
"Pause/play music stream to get effects applied".

TODO: bring back misound (same as stock)

Co-authored-by: Henrique Silva <jhenrique09.mcz@hotmail.com>
Change-Id: I528a8c90defe336dcb79fa1c31d3d52b9d39fe14
Signed-off-by: basamaryan <basam.aryan@gmail.com>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -99,4 +99,11 @@
     <string name="refresh_standard">Standard (60Hz)</string>
     <string name="refresh_extreme">Smooth (120Hz)</string>
 
+    <!-- Dolby Atmos -->
+    <string name="dolby_title">Dolby Atmos</string>
+    <string name="dolby_enable">Enable</string>
+    <string name="dolby_summary">Surround sound</string>
+    <string name="dolby_profile_title">Choose a profile</string>
+    <string name="dolby_profile_dynamic">Dynamic</string>
+
 </resources>
