marble: parts: Set proper summary for dolby settings
Show the current status in Settings > Sound as well as the QS tile.

Change-Id: I85226144494b82c2bf3359ca3831acfa6640a341
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -104,8 +104,7 @@
 
     <!-- Dolby Atmos -->
     <string name="dolby_title">Dolby Atmos</string>
-    <string name="dolby_enable">Enable</string>
-    <string name="dolby_summary">Surround sound</string>
+    <string name="dolby_enable">Use Dolby Atmos</string>
     <string name="dolby_profile_title">Choose a profile</string>
     <string name="dolby_profile_dynamic">Dynamic</string>
     <string name="dolby_off">Off</string>
