--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="stylus_switch_title">Enable Xiaomi Stylus</string>
     <string name="stylus_switch_summary">Enable this settings to use Xiaomi stylus</string>
 
+    <!-- Xiaomi Parts -->
+    <string name="app_name">Xiaomi Parts</string>
+
     <!-- Xiaomi Keyboard -->
     <string name="keyboard_title">Xiaomi Keyboard</string>
     <string name="keyboard_summary">Xiaomi Keyboard Settings</string>
