--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -108,5 +108,22 @@
     <string name="dolby_summary">Surround sound</string>
     <string name="dolby_profile_title">Choose a profile</string>
     <string name="dolby_profile_dynamic">Dynamic</string>
+    <string name="dolby_off">Off</string>
+    <string name="dolby_on">On</string>
+    <string name="dolby_low">Low</string>
+    <string name="dolby_medium">Medium</string>
+    <string name="dolby_high">High</string>
+    <string name="dolby_on_with_profile">On (%1$s)</string>
+    <string name="dolby_bass_enhancer">Bass Enhancer</string>
+    <string name="dolby_dialogue_enhancer">Dialogue Enhancer</string>
+    <string name="dolby_stereo_widening">Stereo Widening</string>
+    <string name="dolby_category_advanced">Advanced</string>
+
+    <!-- Dirac settings: Sound Scenes -->
+    <string name="music_headset_scenario_select">Choose scene</string>
+    <string name="music_headset_scenario_intelligent">Smart</string>
+    <string name="music_headset_scenario_music">Music</string>
+    <string name="music_headset_scenario_video">Movie / Video</string>
+    <string name="music_headset_scenario_vocal">Voice</string>
 
 </resources>
